tests/NormalTests/paczka1/small_fuzzy/48172919.err
Error in line 6: xID7X1 S352 7,9
Error in line 7: ymcQ A614 35,8
